tests/sksl/errors/golden/UseWithoutInitializeArrayIndex.glsl
### Compilation failed:

Updated & out!
CFG scan!
Updated & out!
CFG scan!
Updated & out!
CFG scan!
Updated & out!
CFG scan!
error: 1: 'i' has not been assigned
1 error
